--- a/IRL_itelator-Demo.ipynb
+++ b/IRL_itelator-Demo.ipynb
@@ -343,67 +343,120 @@
    "source": [
     "ここから逆強化学習\n",
     "\n",
-    "方策ベクトルを書く"
+    "教師データから得られた方策ベクトルを書く"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03\n",
+      " 0.03 0.03 0.03 0.03 0.91 0.03 0.91 0.91 0.91 0.91 0.91]\n",
+      "[0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03\n",
+      " 0.91 0.03 0.03 0.03 0.03 0.91 0.03 0.03 0.03 0.03 0.03]\n",
+      "[0.91 0.91 0.91 0.91 0.91 0.91 0.91 0.91 0.91 0.91 0.91 0.91 0.91 0.91\n",
+      " 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03]\n",
+      "[0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03 0.03\n",
+      " 0.03 0.91 0.91 0.91 0.03 0.03 0.03 0.03 0.03 0.03 0.03]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi1_2=pi1+0.12*(pi1<1)-0.09\n",
+    "pi2_2=pi2+0.12*(pi2<1)-0.09\n",
+    "pi3_2=pi3+0.12*(pi3<1)-0.09\n",
+    "pi4_2=pi4+0.12*(pi4<1)-0.09\n",
+    "\n",
+    "\n",
+    "print(pi1_2)\n",
+    "print(pi2_2)\n",
+    "print(pi3_2)\n",
+    "print(pi4_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([191.09979759, 192.09979759, 194.04019958, 196.0002016 ,\n",
-       "       197.98000162, 193.04019958, 194.04019958, 196.0002016 ,\n",
-       "       197.98000162, 199.97979961, 195.0002016 , 196.0002016 ,\n",
-       "       197.98000162, 199.97979961, 201.99979759, 196.98000162,\n",
-       "       197.98000162, 199.97979961, 201.99979759, 204.04019958,\n",
-       "       195.0002016 , 196.0002016 , 197.98000162, 199.97979961,\n",
-       "       201.99979759])"
+       "8.1e-07"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Q2"
+    "#実際に記録された遷移。教師データ。\n",
+    "state_data=[1,2,1,4]\n",
+    "\n",
+    "#最尤推定の初期\n",
+    "v_estm=np.zeros(25)\n",
+    "\n",
+    "\n",
+    "P1 = sparse.lil_matrix((25,25))\n",
+    "P1.setdiag( pi1_2) \n",
+    "P2 = sparse.lil_matrix((25,25))\n",
+    "P2.setdiag( pi2_2) \n",
+    "P3 = sparse.lil_matrix((25,25))\n",
+    "P3.setdiag( pi3_2) \n",
+    "P4 = sparse.lil_matrix((25,25))\n",
+    "P4.setdiag( pi4_2) \n",
+    "\n",
+    "p_matrix=P1*A1+P2*A2+P3*A3+P4*A4\n",
+    "\n",
+    "#式3の分母を計算する。これは状態の関数である。\n",
+    "def bunbo(x):\n",
+    "    bunbo=0\n",
+    "    for i in range(25):\n",
+    "        bunbo=bunbo+p_matrix[x,i]*exp(v_estm[i])\n",
+    "    return bunbo\n",
+    "    \n",
+    "bunbo(1)\n",
+    "#state_dataに対してLLを計算する\n",
+    "Likelihood=1\n",
+    "for t in range(len(state_data)):\n",
+    "    Likelihood=Likelihood*(p_matrix[1,1])*exp(v_estm[state_data[t]])/bunbo(state_data[t])\n",
+    "\n",
+    "\n",
+    "Likelihood\n",
+    "                                                      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([194.04019958, 196.0002016 , 197.98000162, 199.97979961,\n",
-       "       197.98000162, 196.0002016 , 197.98000162, 199.97979961,\n",
-       "       201.99979759, 199.97979961, 197.98000162, 199.97979961,\n",
-       "       201.99979759, 204.04019958, 201.99979759, 199.97979961,\n",
-       "       201.99979759, 204.04019958, 201.99979759, 204.04019958,\n",
-       "       197.98000162, 199.97979961, 201.99979759, 204.04019958,\n",
-       "       201.99979759])"
+       "2.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "V"
+    "def bunbo(x):\n",
+    "    bunbo=1\n",
+    "    for i in range(25):\n",
+    "        bunbo=bunbo+p_matrix[x,i]*exp(v_estm[i])\n",
+    "    return bunbo\n",
+    "    \n",
+    "bunbo(1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
